@@ -1,3 +1,9 @@
+2018-07-31 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/stm8/ralloc.c,
+	  src/stm8/gen.c:
+	  Improve shift of global variables by 1.
+
 2018-07-30 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/SDCCval.c,
